# bugtracker

./: README.md  db.sqlite3  manage.py  pyproject.toml
bugtracker_app/: admin.py  forms.py  models.py  views.py
bugtracker_app/migrations/: 0001_initial.py
bugtracker_config/: asgi.py  settings.py  urls.py  wsgi.py
templates/: addnewticket.html  editticket.html  index.html  login.html  ticketdetails.html  userdetails.html
