[tool.poetry]
name = "bugtracker"
version = "0.1.0"
description = "Full Featured Bugs Tracker"
authors = ["Reginald Tjitradi <rtjitradi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
